--- a/Base_Server/appspec.yml
+++ b/Base_Server/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
     - source: /Base_Server/
-      destination: /var/www/html/
+      destination: /var/www/
 hooks:
     BeforeInstall:
       - location: /deletePrevDeploy.bash
