--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,8 @@
 version: 0.0
 os: linux
 files:
-    - source: /Base_Server/
-      destination: /var/www/
+    - source: /Base_Server
+      destination: /var/www
 hooks:
     BeforeInstall:
       - location: /deletePrevDeploy.bash
